RESOLVED FIXED201115
RenderLayer::updateLayerPositions() doesn't propagate the ancestor flags correctly
https://bugs.webkit.org/show_bug.cgi?id=201115
Summary RenderLayer::updateLayerPositions() doesn't propagate the ancestor flags corr...
Simon Fraser (smfr)
Reported 2019-08-23 21:06:13 PDT
RendderLayer::updateLayerPositions() doesn't propagate the ancestor flags correctly
Attachments
Patch (7.20 KB, patch)
2019-08-23 21:09 PDT, Simon Fraser (smfr)
no flags
Patch (7.19 KB, patch)
2019-08-23 21:10 PDT, Simon Fraser (smfr)
zalan: review+
Simon Fraser (smfr)
Comment 1 2019-08-23 21:09:24 PDT
Simon Fraser (smfr)
Comment 2 2019-08-23 21:10:28 PDT
Simon Fraser (smfr)
Comment 3 2019-08-24 10:35:52 PDT
Radar WebKit Bug Importer
Comment 4 2019-08-24 10:36:17 PDT
Note You need to log in before you can comment on or make changes to this bug.